# easyspec

./: LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
docs/source/: Cleaning.rst  api.rst  conf.py  index.rst
easyspec/: __init__.py
easyspec/analysis/: __init__.py  analysis.py
easyspec/cleaning/: __init__.py  cleaning.py
easyspec/extraction/: README  __init__.py  extraction.py
easyspec/extraction/airmass/: apo_airmass_extinction.txt  ctio_airmass_extinction.txt  kpno_airmass_extinction.txt  lapalma_airmass_extinction.txt  mko_airmass_extinction.txt  mtham_airmass_extinction.txt  paranal_airmass_extinction.txt
tutorial/: Image_cleaning_easyspec.ipynb  spectroscopy_tracing_easyspec.ipynb
tutorial_data/bias/: 0056_BIAS_13-05-2023.fits.fz  0057_BIAS_13-05-2023.fits.fz  0058_BIAS_13-05-2023.fits.fz  0059_BIAS_13-05-2023.fits.fz  0060_BIAS_13-05-2023.fits.fz
tutorial_data/flats/: 0064_PKSJ0049-5738_13-05-2023.fits.fz  0065_PKSJ0049-5738_13-05-2023.fits.fz  0066_PKSJ0049-5738_13-05-2023.fits.fz
tutorial_data/lamp/: 0072_PKSJ0049-5738_13-05-2023_comp.fits.fz  0073_PKSJ0049-5738_13-05-2023_comp.fits.fz  0074_PKSJ0049-5738_13-05-2023_comp.fits.fz
tutorial_data/spec_PKSJ0049_5738/: 0069_PKSJ0049-5738_13-05-2023.fits.fz  0070_PKSJ0049-5738_13-05-2023.fits.fz
tutorial_data/std_star/: 0173_Calibration-Star_28-04-2023.fits.fz
