[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"


[project]
name = "easyspec"
authors = [
    { name = "Raniere de Menezes", email = "easyfermi@gmail.com" },
    ]
description = "The easiest way to do long-slit spectroscopy."
readme = "README.md"
requires-python = ">=3.9,<3.10"
keywords = [
    "python",
    "spectroscopy",
    "optical",
    "astronomy",
]
license = { text = "BSD-3-Clause" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
]
dependencies = [
    "astropy==5.1",
    "corner==2.2.2",
    "emcee==3.1.4",
    "matplotlib==3.8.2",
    "numpy==1.21.5",
    "ccdproc==2.4.0",
    "scipy==1.9.1",
    "dust_extinction==1.2",
    "notebook==6.4.4",
    "tqdm==4.64.1",
]
dynamic = ["version"]

[tool.setuptools_scm]
write_to = "/easyspec/_version.py"

[tool.setuptools.packages.find]
where = ["easyspec"]

[tool.setuptools.package-data]
"resources.ebl" = ["*.fits.gz", "*.fits"]
"reousrce.images" = ["*.png", "*.jpg"]

[project.optional-dependencies]
dev = ["easyspec[docs]", "ruff", "pre-commit"]

[project.scripts]
my-script = "my_package.module:function"

# ... other project metadata fields as listed in:
#     https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
